# safe_integers

./: .travis.yml  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  example_safe_cast.cpp
include/safe/: cast_default.hpp  safe_cast.hpp
include/safe/backends/builtin/: cast_backend.hpp
include/safe/backends/native/: cast_backend.hpp  safe_compare.hpp
include/safe/common/: cast_abstract.hpp  helpers.hpp
include/safe/exceptions/: std_overflow.hpp
tests/: CMakeLists.txt  test_assign.cpp  test_compare.cpp  types_list.hpp
